# intel_jtag_uart

./: .gitignore  LICENSE  README.md  release.sh  setup.cfg
example/arrow_deca/: README.md  arrow_deca_mini_cpu_jtag_uart.sof
src/intel_jtag_uart/: __init__.py  intel_jtag_uart.py
