[metadata]
name = intel_jtag_uart
version = 0.0.2
author = Tom Verbeure
author_email = hombre@gmail.com
description = Package to interact with JTAG UART modules in Intel FPGA designs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomverbeure/intel_jtag_uart
project_urls =
    Bug Tracker = https://github.com/tomverbeure/intel_jtag_uart/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
